Added open source contributions section

--- a/index.html
+++ b/index.html
@@ -105,6 +105,41 @@
         </div>
       </div>
     </section>
+    <section class="open-source-contributions panel" data-color="white">
+      <h1>Open Source Contributions</h1>
+      <div class="contributions">
+        <table>
+          <tr>
+            <th>Project Title</th>
+            <th>Project Description</th>
+            <th>Stars</th>
+            <th>Contributors</th>
+            <th>Forks</th>
+          </tr>
+          <tr>
+            <td>lorem</td>
+            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</td>
+            <td>lorem</td>
+            <td>lorem</td>
+            <td>lorem</td>
+          </tr>
+          <tr>
+            <td>lorem</td>
+            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</td>
+            <td>lorem</td>
+            <td>lorem</td>
+            <td>lorem</td>
+          </tr>
+          <tr>
+            <td>lorem</td>
+            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</td>
+            <td>lorem</td>
+            <td>lorem</td>
+            <td>lorem</td>
+          </tr>
+        </table>
+      </div>
+    </section>
     <section class="my-achievements panel" data-color="black">
       <h1 class="my-achievements-header section-header">My Achievements</h1>
       <div class="achievement-cards">
@@ -254,7 +289,7 @@
         <a href="https://www.youtube.com/channel/UClBbJJd0MuQ1RsuPCShIaGQ"><img  data-aos="zoom-in" data-aos-delay="100" class="social-media-icon" src="img/youtube.png" alt="Youtube Icon"></a>
         <a href="https://www.facebook.com/calix.huang.904"><img  data-aos="zoom-in" data-aos-delay="150" class="social-media-icon" src="img/facebook.png" alt="Facebook"></a>
         <a href="https://twitter.com/calixhuang1"><img  data-aos="zoom-in" data-aos-delay="200" class="social-media-icon" src="img/twitter.png" alt="Twitter"></a>
-        <a href="https://www.twitch.tv/calix_huang"><img  data-aos="zoom-in" data-aos-delay="250" class="social-media-icon" src="img/twitch.png" alt="Twitch"></a>
+        <a href="https://www.twitch.tv/calix_huang"><img  data-aos="zoom-in" data-aos-delay="250" class="social-media-icon twitch" src="img/twitch.png" alt="Twitch"></a>
         <a href="https://github.com/calixo888"><img  data-aos="zoom-in" data-aos-delay="300" class="social-media-icon" src="img/github.png" alt="GitHub"></a>
         <a href="https://www.linkedin.com/in/calix-huang-ab5444175/"><img  data-aos="zoom-in" data-aos-delay="350" class="social-media-icon" src="img/linkedin.png" alt="LinkedIn"></a>
         <a href="https://discord.gg/Ee73AD"><img  data-aos="zoom-in" data-aos-delay="400" class="social-media-icon" src="img/discord.png" alt="Discord"></a>
