Added Adsense script tag

--- a/index.html
+++ b/index.html
@@ -313,4 +313,5 @@
   <script>
     AOS.init();
   </script>
+  <script data-ad-client="ca-pub-3207944687013200" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </html>
