--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <section class="about-me panel" data-color="black">
       <h1 class="about-me-header section-header">About Me</h1>
-      <p class="description">My name is Calix Huang and I'm 14 years old. I am an independent study student in a nationwide online school
+      <p class="description">My name is Calix Huang and I'm 15 years old. I am an independent study student in a nationwide online school
         called Connections Academy.<span id="dots"></span><span style="display: none;" id="more"> I am a completely self-taught
         computer programmer, and I learned through online resources and classes. Programming is a big part of my life,
         it's what provided me with the confidence to achieve things I could've never dreamed of.</span></p>
@@ -38,25 +38,22 @@
           <h3>Full Stack Web Development</h3>
           <ul class="fa-ul">
             <li><span class="fa-li"><i class="fas fa-angle-right"></i></span>Web Design</li>
-            <li><span class="fa-li"><i class="fas fa-angle-right"></i></span>HTML, CSS, JavaScript, Django, Flask, Node.js, and React.js experience</li>
-            <li><span class="fa-li"><i class="fas fa-angle-right"></i></span>Freelance design for small companies</li>
+            <li><span class="fa-li"><i class="fas fa-angle-right"></i></span>HTML, CSS, JavaScript, Django and Flask experience</li>
           </ul>
         </div>
         <div class="specialty-card" data-aos="fade-up" data-aos-delay="300">
-          <h3>Data Science</h3>
+          <h3>Software Development</h3>
           <ul class="fa-ul">
-            <li><span class="fa-li"><i class="fas fa-angle-right"></i></span>Data Analysis, Engineering, and Manipulation</li>
-            <li><span class="fa-li"><i class="fas fa-angle-right"></i></span>Traditional Machine Learning methods</li>
-            <li><span class="fa-li"><i class="fas fa-angle-right"></i></span>Natural Language Processing</li>
-            <li><span class="fa-li"><i class="fas fa-angle-right"></i></span>Recommender Systems</li>
+            <li><span class="fa-li"><i class="fas fa-angle-right"></i></span>Frontend Web Developer Intern @ Apollo DAE Inc.</li>
+            <li><span class="fa-li"><i class="fas fa-angle-right"></i></span>Website Developer/Designer Intern @ UVFAB Systems Inc.</li>
+            <li><span class="fa-li"><i class="fas fa-angle-right"></i></span>Software Development Mentor @ Codeninjas</li>
           </ul>
         </div>
         <div class="specialty-card" data-aos="fade-up" data-aos-delay="500">
-          <h3>Leadership</h3>
+          <h3>Creator</h3>
           <ul class="fa-ul">
-            <li><span class="fa-li"><i class="fas fa-angle-right"></i></span>Founder and President of HackSpace</li>
-            <li><span class="fa-li"><i class="fas fa-angle-right"></i></span>Leadership member on Teen Leadership Council at Trivally CoderDojo</li>
-            <li><span class="fa-li"><i class="fas fa-angle-right"></i></span>Student leader in TeenTechSF</li>
+            <li><span class="fa-li"><i class="fas fa-angle-right"></i></span>Creator of HackCollab - a hackathon organizer application</li>
+            <li><span class="fa-li"><i class="fas fa-angle-right"></i></span>Creator of Ano.js - a free web animation platform for web developers</li>
           </ul>
         </div>
       </div>
@@ -67,47 +64,30 @@
         <div class="project-container" data-aos="fade-left" data-aos-delay="100">
           <div class="project-image-container">
             <img src="img/computer-background.jpeg" alt="" class="project-image">
-            <h3 class="project-title">GameStrike</h3>
+            <h3 class="project-title">HackCollab</h3>
           </div>
           <div class="project-info">
-            <h3>GameStrike</h3>
+            <h3>HackCollab</h3>
             <p>
-              A web-based embedded online game website for gamers to earn achievements, play games, and watch their
-              statistics grow. Used HTML, CSS, JavaScript, and Django.
+              HackCollab is a web based hackathon organizer, allowing hackathon competitors to form their teams and brainstorm ideas for the hackathon in advance. HackCollab aims to sponsor hackathons with the use of their software in order to allow for a more competitive and efficient hackathon, without wasting time on team mixers and idea brainstorming.
             </p>
           </div>
         </div>
         <div class="project-container" data-aos="fade-left" data-aos-delay="200">
           <div class="project-image-container">
             <img src="img/computer-background.jpeg" alt="" class="project-image">
-            <h3 class="project-title">TriV Tracker</h3>
+            <h3 class="project-title">Ano.js</h3>
           </div>
           <div class="project-info">
-            <h3>TriV Tracker</h3>
+            <h3>Ano.js</h3>
             <p>
-              A web-based achievement tracking system designed to track student progress throught their
-              programming journey, formatted to easily display to parents and mentors. Used HTML, CSS, JavaScript,
-              and Django
-            </p>
-          </div>
-        </div>
-        <div class="project-container" data-aos="fade-left" data-aos-delay="300">
-          <div class="project-image-container">
-            <img src="img/computer-background.jpeg" alt="" class="project-image">
-            <h3 class="project-title">Collaboratory</h3>
-          </div>
-          <div class="project-info">
-            <h3>Collaboratory</h3>
-            <p>
-              A web-based collaboration hub for students and colleagues alike. Using Django and Django Channels,
-              messages can be asynchronously broadcasted throughout the website in specific chat lobbies without
-              a single line of JavaScript. Used HTML, CSS, and Django.
+              Ano.js is a free web animation platform that allows software engineers, web developers, or anyone creating a website to seamlessly integrate background web animations with a single line of code. The goal of Ano.js is to allow developers to get free web animations without having to create it themselves.
             </p>
           </div>
         </div>
       </div>
     </section>
-    <section class="open-source-contributions panel" data-color="white">
+    <!-- <section class="open-source-contributions panel" data-color="white">
       <h1>Open Source Contributions</h1>
       <div class="contributions">
         <table>
@@ -141,7 +121,7 @@
           </tr>
         </table>
       </div>
-    </section>
+    </section> -->
     <section class="my-achievements panel" data-color="black">
       <h1 class="my-achievements-header section-header">My Achievements</h1>
       <div class="achievement-cards">
@@ -150,13 +130,11 @@
             <div class="achievement-image-container">
               <img class="achievement-image" src="img/computer-background.jpeg" alt="">
             </div>
-            <h3 class="achievement-title">California Cyber Innovation Challenge - 2nd place</h3>
+            <h3 class="achievement-title">Atoms & Bits Hackathon - 1st place & Best Website</h3>
           </div>
           <div class="card-side back">
             <p>
-              Working with the Teen Leadership Council at Trivally CoderDojo, we placed second out of
-              thirty teams in this state-wide cybersecurity and forensics challenge. The trophy was almost
-              as tall as me!
+              The Atoms & Bits Hackathon was put together by many amazingly successful high schoolers, and the event had a strong focus on entrepreneurship and business, which I loved. All products were required to have a business model, and our product, Ano.js, was the best of them all. I ended up forming a team with three other high schoolers and led the team from a product standpoint.
             </p>
           </div>
         </div>
@@ -208,34 +186,6 @@
             <span>Views</span><span>Date</span>
           </div>
         </div>
-        <div class="video-container" data-aos="zoom-in" data-aos-delay="300">
-          <iframe class="video" src="https://www.youtube.com/embed/060FeXKZa0g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <h3>Video Title</h3>
-          <div class="video-stats">
-            <span>Views</span><span>Date</span>
-          </div>
-        </div>
-        <div class="video-container" data-aos="zoom-in" data-aos-delay="400">
-          <iframe class="video" src="https://www.youtube.com/embed/060FeXKZa0g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <h3>Video Title</h3>
-          <div class="video-stats">
-            <span>Views</span><span>Date</span>
-          </div>
-        </div>
-        <div class="video-container" data-aos="zoom-in" data-aos-delay="500">
-          <iframe class="video" src="https://www.youtube.com/embed/060FeXKZa0g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <h3>Video Title</h3>
-          <div class="video-stats">
-            <span>Views</span><span>Date</span>
-          </div>
-        </div>
-        <div class="video-container" data-aos="zoom-in" data-aos-delay="600">
-          <iframe class="video" src="https://www.youtube.com/embed/060FeXKZa0g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <h3>Video Title</h3>
-          <div class="video-stats">
-            <span>Views</span><span>Date</span>
-          </div>
-        </div>
       </div>
     </section>
     <section class="twitch-livestream panel" data-color="black">
@@ -277,12 +227,10 @@
     <section class="future-concepts panel" data-color="white">
       <h1 class="section-header">Future Concepts to Learn</h1>
       <ul class="fa-ul">
-        <li data-aos="fade-left" data-aos-delay="100"><span class="fa-li"><i class="fas fa-angle-right"></i></span>Recommender Systems</li>
-        <li data-aos="fade-left" data-aos-delay="200"><span class="fa-li"><i class="fas fa-angle-right"></i></span>Time Series Analysis</li>
-        <li data-aos="fade-left" data-aos-delay="300"><span class="fa-li"><i class="fas fa-angle-right"></i></span>Big Data Technologies - Hadoop and Apache Spark</li>
-        <li data-aos="fade-left" data-aos-delay="400"><span class="fa-li"><i class="fas fa-angle-right"></i></span>Deep Learning</li>
-        <li data-aos="fade-left" data-aos-delay="500"><span class="fa-li"><i class="fas fa-angle-right"></i></span>Computer Vision</li>
-        <li data-aos="fade-left" data-aos-delay="600"><span class="fa-li"><i class="fas fa-angle-right"></i></span>AWS Services - SageMaker and RoboMaker</li>
+        <li data-aos="fade-left" data-aos-delay="100"><span class="fa-li"><i class="fas fa-angle-right"></i></span>Node.js</li>
+        <li data-aos="fade-left" data-aos-delay="200"><span class="fa-li"><i class="fas fa-angle-right"></i></span>Amazon Alexa Skill Programming</li>
+        <li data-aos="fade-left" data-aos-delay="300"><span class="fa-li"><i class="fas fa-angle-right"></i></span>Blockchain</li>
+        <li data-aos="fade-left" data-aos-delay="400"><span class="fa-li"><i class="fas fa-angle-right"></i></span>AWS Services</li>
       </ul>
     </section>
     <section class="footer panel" data-color="black">
