--- a/index.html
+++ b/index.html
@@ -173,17 +173,17 @@
       <h1 class="section-header">Popular YouTube Videos</h1>
       <div class="videos">
         <div class="video-container" data-aos="zoom-in" data-aos-delay="100">
-          <iframe class="video" src="https://www.youtube.com/embed/060FeXKZa0g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <h3>Video Title</h3>
+          <iframe class="video" src="https://www.youtube.com/embed/It9xWoSwG_g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <h5>Designing my Personal Website</h5>
           <div class="video-stats">
-            <span>Views</span><span>Date</span>
+            <span>47 Views</span><span>October 18, 2019</span>
           </div>
         </div>
         <div class="video-container" data-aos="zoom-in" data-aos-delay="200">
-          <iframe class="video" src="https://www.youtube.com/embed/060FeXKZa0g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <h3>Video Title</h3>
+          <iframe class="video" src="https://www.youtube.com/embed/eRjThhC5Oao" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <h5>Contributing to First Open Source Projects</h5>
           <div class="video-stats">
-            <span>Views</span><span>Date</span>
+            <span>17 Views</span><span>October 24, 2019</span>
           </div>
         </div>
       </div>
