--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
            <canvas id="demo-canvas"></canvas>
            <div class="main-title">
              <h1 class="main-title-header">Calix Huang</h1>
-             <p class="main-title-description">A self-taught computer programmer that still has no idea what he's doing.</p>
+             <p class="main-title-description">A self-taught computer programmer with a passion for entrepreneurship.</p>
            </div>
         </div>
      </div>
