--- a/index.html
+++ b/index.html
@@ -263,4 +263,5 @@
   <script>
     AOS.init();
   </script>
+  <script src="https://www.calix.dev/js/assets/calixhuang.js" charset="utf-8"></script>
 </html>
